appending stock entity and testing to create order with deducting stock quantity